--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://faiththao.github.io/meadow-app-js",
+  "homepage": "https://faiththao.github.io/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -47,5 +47,4 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   }
-  
 }
